--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "scripts": {
+    "test:e2e": "cypress run"
+  },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^22.13.1",
     "cypress": "^14.0.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "typescript": "^5.7.3"
   }
 }
